# rusty-rtos

./: Cargo.toml  LICENSE  README.md  linker.ld
.cargo/: config.toml
openocd/scripts/: openocd_raspi5.cfg
src/: main.rs  panic_wait.rs
src/bsp/: mod.rs
src/bsp/raspberry_pi_5/: gpio.rs  mod.rs  uart.rs
