[package]
name = "rust-aarch64-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64 = "0.0.11"
aarch64-paging = "0.5.0"

[[bin]]
name= "kernel8-elf"
path = "src/main.rs"

[features]
raspberry_pi_5 = []
default = ["raspberry_pi_5"]
